# codex-log

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py
codex_log/: __init__.py  __main__.py  converter.py  models.py  parser.py  renderer.py  session_parser.py
docs/: README.md  test-suite.md  testing.md
templates/: conversation.html  projects.html
tests/: __init__.py  conftest.py  factories.py  simple_test.py
tests/fixtures/: sample_data.py
tests/integration/: __init__.py  test_cli.py  test_converter.py
tests/unit/: __init__.py  test_edge_cases.py  test_models.py  test_parser.py  test_renderer.py  test_session_parser.py
